--- a/flutter_api/.vscode/settings.json
+++ b/flutter_api/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.format.settings.url": "eclipse-java-google-style.xml",
+  "java.saveActions.organizeImports": true,
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "editor.insertSpaces": true
