swaggerのパスを設定

--- a/flutter_api/openapi.properties
+++ b/flutter_api/openapi.properties
@@ -1,4 +1,5 @@
 endpoints.enabled=true
+micronaut.openapi.target.file=target/classes/META-INF/swagger/swagger.yml
 micronaut.openapi.expand.api.title=My APIs
 micronaut.openapi.expand.api.version=v1.1
 micronaut.openapi.expand.api.description=A nice API
